# colloidoscope

./: .gitignore  .rendered.crusher.cpp  Colloidoscope_tutorial.ipynb  Dockerfile  README.md  colloidsforge.yaml  colloidsforge.yml  crusher.cpp  environment.yml  explore_lif.py  incorp_real.py  mainviewer.py  make_dataset.py  monai_unet.py  myhdf5.py  poisson_disc_sampling.py  predict.py  pycrusher.py  pyproject.toml  requirements.txt  setup.py  sim3d.py  simulate.py  slurm-10005982.out  slurm-10006237.out  slurm-10006266.out  test.py  test_gpu.py  track.py  trackpy_accuracy.py  train.py  unet.py  unetdsnt.py
Archive/: HPsauce.py  background.py  monai_unet.py  old_predict.py  old_sim.py  oldmakecenters3d.py  predict.py  test_psf.py
colloidoscope/: __init__.py  attention_unet_202302.pt  dataset.py  deepcolloid.py  hoomd_sim_positions.py  predict.py  simulator.py  train_utils.py  trainer.py  unet.py  unet_dsnt.py  unet_new.py
cpp/: .rendered.crusher.cpp  a.out  crusher.cpp  d0_coord_input.xyz  mainHScrusherPoly  mainHScrusherPoly.cpp  pybind.py  pycrusher.py  testwrapper.py
deepcolloid/: model.py
examples/: Colloidoscope_Colab_tutorial.ipynb  bc4_detect.sh  confocal_schem  detect.ipynb  detect.py  just_confocal.drawio  track.ipynb
output/: .xdp_logo.UKXPX1  df.html  y_benchmark.csv
scripts/: HPsauce.py  b01.py  b01_HP.py  bc4.py  bc4_train.sh  bp1.py  cnr.py  detect.py  gmm.py  h5_keys.py  incorp_real.py  learn_slurm.sh  lodestar.py  model_test.py  predict.py  predict_real.py  psf_huygens.py  sim.py  sim4gr.py  sim_figs.py  sim_gui.py  sim_positions.py  snr.py  (+11 more)
(+141 files in other folders)
